--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -318,7 +318,7 @@
                         $this.text(Math.ceil(this.Counter));
                     },
                     complete: function() {
-                        $this.text(target); // Ensure final number is exact
+                        $this.text(target); 
                     }
                 });
             });
